--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://github.com/Varad2003-wagh/Varad_PortFolio/blob/main/CVVV.jpeg" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -375,21 +375,21 @@
                <!-- mine -->
                <div class="columns download"></div>
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>C(OST)</a>
+                     <a href="https://github.com/Varad2003-wagh/Varad_PortFolio/blob/main/COST.jpeg" class="button"><i class="fa fa-download"></i>C(OST)</a>
                   </p>
                </div>
                <!-- mine end -->
                <!-- mine -->
                <div class="columns download"></div>
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Cyber Suraksha</a>
+                     <a href="https://github.com/Varad2003-wagh/Varad_PortFolio/blob/main/CS.jpeg" class="button"><i class="fa fa-download"></i>Cyber Suraksha</a>
                   </p>
                </div>
                <!-- mine end -->
                <!-- mine -->
                <div class="columns download"></div>
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>C(HT)</a>
+                     <a href="https://github.com/Varad2003-wagh/Varad_PortFolio/blob/main/CHT.jpeg" class="button"><i class="fa fa-download"></i>C(HT)</a>
                   </p>
                </div>
                <!-- mine end -->
