--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                         India.
                      </span><br>
                      <span>varadwagh18@gmail.com</span>
+			  <span>+91 88016163816</span>
                   </p>
 
                </div>
